# CivicCareee

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/civic_care/: MainActivity.kt
android/app/src/main/res/xml/: network_security_config.xml
backend/: pyproject.toml
backend/apps/core/: enums.py  functions.py  managers.py  models.py  tasks.py  utils.py
backend/apps/core/api/v1/: serializers.py  urls.py  views.py
backend/base/api/v1/: constants.py  decorators.py  permissions.py  serializers.py  views.py
backend/config/: celery.py  urls.py
lib/: main.dart
lib/constants/: api_constants.dart  api_service.dart
lib/screens/community/: community_page.dart
lib/screens/complaint/: complaint_history.dart  complaint_register.dart  nearby_complaints.dart  track_complaint.dart
lib/screens/home/: home_page.dart
lib/screens/login/: login_page.dart
lib/screens/profile/: profile_page.dart
lib/screens/register/: register_page.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
